# TrafficLightDetection

./: CMakeLists.txt  README.md
include/: preprocess.h  util.h
lib/include/: trt.h
lib/src/: trt.cpp
src/: main.cpp  preprocess.cpp
